--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Application</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_d.css">
 </head>
 <body>
     <div class="countdown-container">
@@ -21,6 +21,6 @@
         <div id="events-list"><div id="innerList"></div></div>
     </div> 
 
-    <script src="script_e.js"></script>
+    <script src="script_d.js"></script>
 </body>
 </html>
