--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="countdown-container">
-        <h1 id="title">Event Countdown</h1>        
+        <h1 id="title">How Many Days Until...?</h1>        
         <div id="add-event">
             <input type="text" id="event-name" placeholder="Event name">
             <input type="date" id="event-date">
